# bug-filing

./: .gitignore  CLAUDE.md  README.md  default_variables.yaml  pyproject.toml  ticket-yaml  update-readme.sh
bug_filing/: adf.py  create_ticket.py  fleetcommand_client.py  fuzzy_matcher.py  get_ticket_cli.py  issue_field_index.py  jira_client.py  jira_comments.py  jira_content.py  jira_session.py  jira_sprints.py  jira_users.py  read_ticket.py  templating.py  testrail_client.py  ticket_cli.py  ticket_yaml.py
references/: dom-73941.json  dom-bug-createmeta.json
tests/: conftest.py  test_adf.py  test_fuzzy_matcher.py  test_issue_field_index.py  test_jira_sprints.py  test_jira_users.py  test_templating.py  test_ticket_cli.py  test_ticket_yaml.py
tpl/: new-bug.yaml  pats.yaml  task.yaml  testrail_failure.yaml
