[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bug-filing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mistletoe>=1.5.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests",
]

[project.scripts]
ticket-yaml = "bug_filing.ticket_cli:main"
